--- a/index.html
+++ b/index.html
@@ -1,24 +1,124 @@
+
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="html-import" href="MAXIOT_MOB/index1.html">
-        
-        <a href="MAXIOT_MOB/index1.html">open</a>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-    </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>MAXIOT</title>
+	<link rel="shortcut icon" href="MAXIOT_MOB/MOB/icon.png">
+	
+	<!--..................-->
+	<link rel="stylesheet" href="MAXIOT_MOB/MOB/MyJS/jquery/css/themes/default/jquery.mobile.icons-1.4.5.min.css">
+	<link rel="stylesheet" href="MAXIOT_MOB/MOB/MyJS/jquery/css/themes/default/jquery.mobile.icons-1.4.5.min.css">
+	<link rel="stylesheet" href="MAXIOT_MOB/MOB/MyJS/jquery/css/theme-classic.css">
+	<link rel="stylesheet" href="MAXIOT_MOB/MOB/MyJS/jquery/css/themes/default/jquery.mobile-1.4.5.min.css">
+	<script src="MAXIOT_MOB/MOB/MyJS/jquery/js/jquery.js"></script>
+	<script src="MAXIOT_MOB/MOB/MyJS/jquery/js/jquery.mobile-1.4.5.min.js"></script>
+	<!--..................-->
+	<script src="MAXIOT_MOB/MOB/MyJS/justgage/raphael-2.1.4.min.js"></script>
+    <script src="MAXIOT_MOB/MOB/MyJS/justgage/justgage.js"></script>
+			
+	<!--..................-->
+	<script src="Gui_Engine/GUI_PROCESSOR.js"></script>
+	<script src="Gui_Engine/GUI_ELEMENTS.js"></script>
+	<script src="MAXIOT_MOB/GUI_SCRIPT.dg"></script>
+	
+	<!--..................-->
+	<script src="MAXIOT_MOB/MOB/js/paho-mqtt-min.js"></script>
+	<script src="MAXIOT_MOB/MOB/js/mqtt.js"></script>	
+	<!--..................-->	
+	
+	<script src="MAXIOT_MOB/MOB/MyJS/dygraphs/dygraph.min.js"></script>
+    <link rel="stylesheet" href="MAXIOT_MOB/MOB/MyJS/dygraphs/dygraph.css">
+			
+	<!--..................-->	
+	
+	
+	
+<style>
+.ui-icon-myicon:after {
+    background-image: url("MyPIC/111.png");
+    /* Make your icon fit */
+    background-size: 18px 18px;
+}
+</style>	
+
+
+<!-- ####################################################################################### -->
+	
+<script>
+$(document).on('pagebeforecreate',"#page_1", function(){
+	console.log("*** pagebeforecreate:1:page_1");
+	
+	Create_Page('3');
+	GUI_Processor(START_SCRIPT);
+	//console.log("is_1");
+	console.log("*** pagebeforecreate:0:page_1");
+});
+$(document).on("pagecreate","#page_1", function(){
+	console.log("*** pagecreate:1:page_1");
+	//console.log("is_2");
+	console.log("*** pagecreate:0:page_1");
+});
+$( document ).on( "pagecreate", function() {
+	console.log("*** pagecreate:1");
+	//console.log("is_3");
+	console.log("*** pagecreate:0");
+});
+$(document).on("pageinit","#page_1",function(){
+	console.log("*** pageinit:1:page_1");
+	//console.log("is_4");
+	console.log("*** pageinit:0:page_1");
+});	
+$(document).on("pageshow", "#page_1", function(){
+	console.log("*** pageshow:1:page_1");
+	//console.log("is_5");
+	console.log("*** pageshow:0:page_1");
+}); 
+//#####################################################################
+$( document ).on( "pagecontainershow", function( event, ui ) {
+	console.log("*** pagecontainershow:1:");
+	//console.log("is_6");
+	console.log("*** pagecontainershow:0:");
+});
+
+//#####################################################################
+
+$( document ).on( "mobileinit", function() { 
+console.log("*** mobileinit:1");
+console.log("*** mobileinit:0");
+});
+
+$( window ).resize(function(){
+  //console.log("*** resize:1 ########################");
+	console.log("*** resize:1:");
+	console.log("*** resize:0:");
+});
+
+//#####################################################################
+
+</script>
+
+</head>
+
+
+<body data-role="IS_HTML_BODY">
+	<div  data-role="IS_STYLE" ></div>
+	<div  data-role="IS_JAVA_SCRIPT" ></div>
+	<!-- ####################################################################################### -->
+	<div data-role="page" id="page_1">
+		<div data-role="header" id="header_1">
+			<h1><span id="MyHeader_Text_1"></span></h1>
+			<div data-role="navbar">
+				<div data-role="navbar_1" ></div>
+			</div>
+		</div><!-- /header -->
+		<div data-role="content_1" class="ui-content" role="main"></div>	
+		<div data-role="panel_1" ></div>
+		<div data-role="footer" data-position="fixed" data-theme="a">
+			<h1> </h1>
+		</div><!-- /footer -->
+	</div><!-- /page -->
+	<!-- ####################################################################################### -->
+</body>
 </html>
